src/objects/ServiceRequestBulkSchedule__c.object
<CustomObject>
    <fields>
        <fullName>BulkSchedule__c</fullName>
        <label>Bulk Schedule</label>
        <referenceTo>BulkSchedule__c</referenceTo>
        <relationshipLabel>ServiceRequest BulkSchedule</relationshipLabel>
        <relationshipName>ServiceRequest_BulkSchedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SRBulkScheduleExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds Service Request id concatenated with bulkscheduler Id</description>
        <externalId>true</externalId>
        <label>SRBulkScheduleExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <formula>BulkSchedule__r.ScheduleDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceLocation__c</fullName>
        <formula>/* for now we have only include address further we may need some additional info*/
 ServiceRequest__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRequest__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ServiceRequest BulkSchedule</relationshipLabel>
        <relationshipName>ServiceRequest_BulkSchedule</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Service_Request_Count__c</fullName>
        <formula>BulkSchedule__r.ServiceRequestBulkScheduleCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <formula>ServiceRequest__r.Service_Request_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <formula>BulkSchedule__r.Ward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ward</label>
        <type>Text</type>
    </fields>
    <label>ServiceRequest BulkSchedule</label>
    <nameField>
        <displayFormat>SRB-{000000}</displayFormat>
        <label>ServiceRequestBulkSchedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceRequest BulkSchedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>